Revision history for Perl extension Test::Apocalypse

* 0.06

	Fixed OutdatedPrereqs.pm so it doesn't blow up on zero prereqs - thanks Ryan52!
	Added $@ to the module load failure output, for better debugging - thanks Ryan52!
	Minor POD tweaks
	Added more common terms to the Pod_Spelling.pm test
	Added Test::NoBreakpoints to the testsuite
	Added Test::ConsistentVersion to the testsuite
	Added Test::EOL to the testsuite
	Added Test::AutoLoader to the testsuite
	Modified is_apocalypse_here() to accept options, you can now enable/disable specific tests!
	Test::Apocalypse now finally passes it's own testsuite under RELEASE_TESTING, ha! ( thanks to Debian guys for prodding me )

* 0.05

	Added Test::Module::Used to the testsuite
	Added Test::Synopsis to the testsuite
	Enabled the Test::Pod::Coverage test, it was previously disabled by mistake!
	Changed to the new ENV var scheme, proposed by Alias ( and thanks to JAWNSY for prodding me )

* 0.04

	Removed Test::CheckManifest and replaced with Test::DistManifest, thanks JAWNSY!
	Various POD cleanups and additions

* 0.03

	Added more tests :)

* 0.02

	fix bad test

* 0.01

	initial release