@@ -52,6 +52,10 @@ Encapsulates Test::ConsistentVersion functionality.
 Encapsulates Test::ConsistentVersion functionality. We disable the pod/readme checks because it's not "common practice" to put
 them in POD, I think...
 
+=head2 do_test()
+
+The main entry point for this plugin. Automatically called by L<Test::Apocalypse>, you don't need to know anything more :)
+
 =head1 SEE ALSO
 
 L<Test::Apocalypse>
