@@ -70,6 +70,10 @@ This plugin detects for the presence of DOS newlines in the dist.
 
 This plugin detects for the presence of DOS newlines in the dist.
 
+=head2 do_test()
+
+The main entry point for this plugin. Automatically called by L<Test::Apocalypse>, you don't need to know anything more :)
+
 =head1 SEE ALSO
 
 L<Test::Apocalypse>
