@@ -75,6 +75,10 @@ This plugin ensures basic sanity for the files in the dist.
 
 This plugin ensures basic sanity for the files in the dist.
 
+=head2 do_test()
+
+The main entry point for this plugin. Automatically called by L<Test::Apocalypse>, you don't need to know anything more :)
+
 =head1 SEE ALSO
 
 L<Test::Apocalypse>
